--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,16 +1,9 @@
 steps:
-  - label: ":rabbit: Install CodSpeed Runner"
-    key: install-codspeed
-    command: |
-      curl --proto '=https' --tlsv1.2 -LsSf https://github.com/CodSpeedHQ/runner/releases/download/v2.0.1-beta.1/codspeed-runner-installer.sh | bash
-
-  # wait for all the previous steps to finish
-  - wait
-
   - label: ":rabbit2: Run benchmarks with CodSpeed"
     key: benchmarks
     command: |
-      curl -fsSL https://get.pnpm.io/install.sh | bash -
-      source /root/.bashrc
-      pnpm env use --global 18
-      codspeed-runner --token=$CODSPEED_TOKEN --upload-url=$CODSPEED_UPLOAD_URL -- pnpm vitest bench
+      curl --proto '=https' --tlsv1.2 -LsSf https://github.com/CodSpeedHQ/runner/releases/download/v2.0.1-beta.1/codspeed-runner-installer.sh | bash;
+      curl -fsSL https://get.pnpm.io/install.sh | bash -;
+      source /root/.bashrc;
+      pnpm env use --global 18;
+      codspeed-runner --token=$CODSPEED_TOKEN --upload-url=$CODSPEED_UPLOAD_URL -- pnpm vitest bench;
