--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -3,6 +3,7 @@ steps:
     key: benchmarks
     command: |
       curl --proto '=https' --tlsv1.2 -LsSf https://github.com/CodSpeedHQ/runner/releases/download/v2.0.1-beta.1/codspeed-runner-installer.sh | bash;
+      source "$HOME/.cargo/env";
       curl -fsSL https://get.pnpm.io/install.sh | bash -;
       source /root/.bashrc;
       pnpm env use --global 18;
