--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -5,6 +5,7 @@ steps:
       curl --proto '=https' --tlsv1.2 -LsSf https://github.com/CodSpeedHQ/runner/releases/download/v2.0.1-beta.1/codspeed-runner-installer.sh | bash;
       source "$HOME/.cargo/env";
       curl -fsSL https://get.pnpm.io/install.sh | bash -;
-      source "$HOME/.bashrc";
-      pnpm env use --global 18;
+      # source "$HOME/.bashrc";
+      # pnpm env use --global 18;
+      /root/.local/share/pnpm/pnpm env use --global 18;
       codspeed-runner --token=$CODSPEED_TOKEN --upload-url=$CODSPEED_UPLOAD_URL -- pnpm vitest bench;
