--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -11,3 +11,5 @@ steps:
       /root/.local/share/pnpm/pnpm i -g pnpm;
       pnpm env use --global 18;
       codspeed-runner --token=$CODSPEED_TOKEN --upload-url=$CODSPEED_UPLOAD_URL -- pnpm vitest bench;
+    env:
+      SHELL: /bin/bash
