--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -4,12 +4,9 @@ steps:
     command: |
       curl --proto '=https' --tlsv1.2 -LsSf https://github.com/CodSpeedHQ/runner/releases/download/v2.0.1-beta.1/codspeed-runner-installer.sh | bash;
       source "$HOME/.cargo/env";
-      curl -fsSL https://get.pnpm.io/install.sh | bash -;
-      # source "$HOME/.bashrc";
-      # pnpm env use --global 18;
-      /root/.local/share/pnpm/pnpm setup;
-      /root/.local/share/pnpm/pnpm i -g pnpm;
-      /root/.local/share/pnpm/pnpm env use --global 18;
+      curl -fsSL https://fnm.vercel.app/install | bash;
+      fnm install;
+      corepack enable;
       codspeed-runner --token=$CODSPEED_TOKEN --upload-url=$CODSPEED_UPLOAD_URL -- /root/.local/share/pnpm/pnpm vitest bench;
     env:
       SHELL: /bin/bash
