--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -11,7 +11,7 @@ steps:
       sed -e '/[ -z "$PS1" ] && return/s/^/#/g' -i /root/.bashrc
       cat "$HOME/.bashrc";
       source "$HOME/.bashrc";
-      fnm install;
+      fnm install --resolve-engines;
       corepack enable;
       codspeed-runner --token=$CODSPEED_TOKEN --upload-url=$CODSPEED_UPLOAD_URL -- /root/.local/share/pnpm/pnpm vitest bench;
     env:
