--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,4 +1,7 @@
 steps:
+  - label: setarch
+    command: |
+      setarch --list
   - label: ":rabbit2: Run benchmarks with CodSpeed"
     key: benchmarks
     command: |
