chore(buildkite): fix pipeline 17

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -4,6 +4,7 @@ steps:
       setarch --list
       setarch linux64 echo "linux64 works"
       setarch x86_64 echo "x86_64 works"
+      ARCH="x86_64" setarch x86_64 -R echo "x86_64 works with flags"
   - label: ":rabbit2: Run benchmarks with CodSpeed"
     key: benchmarks
     command: |
